migrate sign-in-options from sanity to mdx

--- a/docs/authentication/configuration/sign-in-options.mdx
+++ b/docs/authentication/configuration/sign-in-options.mdx
@@ -1,5 +1,243 @@
 ---
-sanity_slug: /docs/authentication/sign-in-options
+title: Sign-in options | Authentication
+description: Clerk provides a large selection of options for managing your user's sign-in experience
 ---
 
-# This is a stub
+# Sign-in options
+
+Clerk provides a large selection of options for managing your user's sign-in experience. Clerk makes it easy to customize the way signing in works in your application, whether your users will be authenticating with [Passwords](/docs/custom-flows/email-password), [Magic Links](/docs/custom-flows/magic-links), [One-time Passcodes](/docs/custom-flows/email-sms-otp), or through a [Social OAuth provider](/docs/authentication/social-connections/overview).
+
+<Callout type="info">
+  For more information about the steps required for a user to sign-in, see our [sign-in flow documentation](/docs/authentication/custom-flows#sign-in-flow).
+</Callout>
+
+You can create your sign-in flow with Clerk's [hosted pages](/docs/account-portal/overview) or [prebuilt components](/docs/components/overview). If you need more control over your flow, you can build your own by using [React hooks](/docs/custom-flows/use-sign-up) or by using the methods of the [SignIn object](/docs/references/javascript/sign-in/sign-in).
+
+## Getting started
+
+When a new application is created, you will be presented with the following screen:
+
+<Images 
+width={1879}
+height={1373}
+src="/docs/images/setup-clerk/create-sign-in-comp.png"
+alt="An interactive builder for customizing your <SignIn /> component, which includes choosing identifiers and social login options."
+/>
+
+From this menu, you can select the key sign-in information that your users will be providing. There are three main sections:
+
+### Identifiers
+
+Identifiers are how your application recognizes an individual user.
+
+- Email address
+- Phone number
+- Username
+
+### Authentication strategy
+
+The authentication refers to whether your application will rely on passwords or a passwordless method of authentication.
+
+- [Password](/docs/custom-flows/email-password)
+- Passwordless
+  - [One-time password (OTP)](/docs/custom-flows/email-sms-otp) - To sign-in, the user will receive a code to their email or phone.
+  - [Magic Link](/docs/custom-flows/magic-links) - To sign-in, the user will click a link sent to their email.
+
+### Connected accounts
+
+Connected accounts are third-party sources used to authenticate your users.
+
+- [Social Login (OAuth)](/docs/authentication/social-connections/oauth)
+- [Web3 authentication](/docs/users/web3-wallets)
+
+Once you've selected the first methods you would like to try, click **Create Application**. If you're not totally sure about what you want to use, don't worry. You can change any of these settings from the Clerk Dashboard later on.
+
+## Making changes
+
+If your initial sign-in choices aren't working out (or if you want to add more options for your users), you can make changes by navigating to the **User & Authentication** section of the Clerk Dashboard.
+
+<Images 
+width={3024}
+height={1652}
+src="/docs/images/authentication/user-and-authentication.png"
+alt="The 'User and Authentication' section of the Clerk Dashboard, which defaults to the 'Email, Phone, Username' tab."
+/>
+
+## Sign-in examples
+
+Lets take a look at a few of the different sign-in options and how they could be combined to fit your application's needs.
+
+### Email address
+
+Let's imagine that you want to require your users to sign-up and sign-in with their email. You want to make sure the email they provided is verified before they can sign-in. After their email is verified, users can sign-in via passwordless methods: by either clicking a link or entering a one-time code sent to their email.
+
+<Steps>
+
+### Allow users to sign-in using their email
+
+Ensure that **Email address** is enabled as an identifier. Navigate to the **Email, Phone, Username** tab under the **User & Authentication** section in the Clerk Dashboard. The toggle next to **Email address** should be on. If it's not, toggle it on and hit **Apply Changes**. Users can now sign-up and sign-in with their email.
+
+<Images 
+width={3024}
+height={1652}
+src="/docs/images/authentication/email-address.png"
+alt="The 'Email, Phone, Username' tab with an arrow pointing to the toggle next to 'Email address', toggled on."
+/>
+
+### Configure **Email address** settings
+
+Select the gear symbol next to **Email address** to open up the configuration settings. 
+
+<Images 
+width={3024}
+height={1652}
+src="/docs/images/authentication/email-address-configuration.png"
+alt="The 'Email, Phone, Username' tab with an arrow pointing to the gear icon next to 'Email address'."
+/>
+
+### Email verification
+
+From there, you can check the boxes next to **Email verification link** and **Email verification code**. Having all of these options toggled on will require users to provide an email on sign-up, require them to verify their email, and will allow them to verify their email with either a link or a code sent to their email.
+
+<Images 
+width={2490}
+height={1398}
+src="/docs/images/authentication/email-address-verification-methods.png"
+alt="The 'Email address' configuration settings with all options toggled on, and with a red outline around the 'Verification Methods' section."
+/>
+
+### Allow users to sign-in passwordlessly
+
+In the **Authentication factors** section under **Email, Phone, Username**, toggle on **Email verification link** and **Email verification code**. This will allow users to sign-in with either a link or a code sent to their email.
+
+<Images 
+width={3024}
+height={1652}
+src="/docs/images/authentication/email-address-verification.png"
+alt="The 'Authentication factors' section under 'Email, Phone, Username' tab with a red arrow pointing to the 'Email verification link' toggle and 'Email verification code, both toggled on. There is also a red arrow pointing to the 'Apply changes' button."
+/>
+
+### Finished!
+
+Now, when a user signs up or signs in to your application, Clerk will send a verification link or code to the user's email.
+
+You can make changes to the redirect behavior of both Sign-in and Sign-up by visiting the **Paths** section of the Clerk Dashboard, or by passing in props if you are using our [custom Clerk components]().
+
+<Callout type="info">
+  For more information on one-time passcodes, see our [OTP documentation](/docs/custom-flows/email-sms-otp).
+</Callout>
+
+</Steps>
+
+### Phone + SMS Code
+
+<Callout>
+  Phone number identifiers and SMS verification are Premium features that are only available on some plans. For more information visit the **Plan & Billing** section of the Clerk Dashboard.
+</Callout>
+
+Let's imagine that your application is going to be exclusively used by people on their phones. You want to collect the user's phone number as the identifier, and you want the user to sign-in to your app by entering a one-time code sent via SMS to the user's device.
+
+<Steps>
+
+### Allow users to sign-in using their phone number
+
+Ensure that **Phone number** is enabled as an identifier. Navigate to the **Email, Phone, Username** tab under the **User & Authentication** section in the Clerk Dashboard. The toggle next to **Phone number** should be on. If it's not, toggle it on and hit **Apply Changes**. Users can now sign-up and sign-in with their phone number.
+
+<Images 
+width={3024}
+height={1652}
+src="/docs/images/authentication/phone-number.png"
+alt="The 'Email, Phone, Username' tab with an arrow pointing to the toggle next to 'Phone number', toggled on."
+/>
+
+Note how the toggle for **Email address** is off, because in this example, your application is prioritizing a mobile-first approach.
+
+### Configure **Phone number** settings
+
+Select the gear symbol next to **Phone number** to open up the configuration settings. 
+
+<Images 
+width={3024}
+height={1652}
+src="/docs/images/authentication/phone-number-configuration.png"
+alt="The 'Email, Phone, Username' tab with an arrow pointing to the gear icon next to 'Phone number'."
+/>
+
+Because in this example, your application is mobile-first, you should have all of these options toggled on. Having all of these options toggled on will require users to provide a phone number on sign-up, require them to verify their phone number, and will allow them to verify their phone number with a code sent to their phone.
+
+<Images 
+width={3024}
+height={1652}
+src="/docs/images/authentication/phone-number-configuration-settings.png"
+alt="The 'Phone number' configuration settings with all options toggled on."
+/>
+
+### Allow users to sign-in with an SMS code
+
+In the **Authentication factors** section under **Email, Phone, Username**, toggle on **SMS verification code**. This will allows users to sign-in with a code sent to their phone.
+
+<Images 
+width={3024}
+height={1652}
+src="/docs/images/authentication/sms-verification.png"
+alt="The 'Authentication factors' section under 'Email, Phone, Username' tab with a red arrow pointing to the 'SMS Verifcation Code' toggle, toggled on. There is also a red arrow pointing to the 'Apply changes' button."
+/>
+
+### Finished!
+
+Now, when a user signs up or signs in to your application, Clerk will send a verification code to the user's phone.
+
+You can make changes to the redirect behavior of both Sign-in and Sign-up by visiting the **Paths** section of the Clerk Dashboard, or by passing in props if you are using our [custom Clerk components]().
+
+<Callout type="info">
+  For more information on one-time passcodes, see our [OTP documentation](/docs/custom-flows/email-sms-otp).
+</Callout>
+
+</Steps>
+
+### Social OAuth + Web3
+
+Let's imagine that you want your users to sign-in with Social OAuth or with a connected Web3 account.
+
+<Steps>
+
+### Disable email/password
+
+Users won't need an email or password, so you can turn those off in the **Email, Phone, Username** tab under the **User & Authentication** section in the Clerk Dashboard.
+
+<Images 
+width={3024}
+height={1652}
+src="/docs/images/authentication/email-phone-off.png"
+alt="The 'Email, Phone, Username' tab with a red arrow pointing to the toggle next to 'Email address' and 'Phone number', both toggled off. There is also a red arrow pointing to the 'Apply changes' button."
+/>
+
+### Enable social connections
+
+Navigate to the **Social Connections** tab under the **User & Authentication** section in the Clerk Dashboard. 
+
+Select the OAuth providers that will be used to authenticate your users. In this example, Google is selected.
+
+<Images 
+width={3024}
+height={1652}
+src="/docs/images/authentication/social-connection-google.png"
+alt="The 'Social Connections' tab under the 'User & Authentication' section with a red arrow pointing to the 'Google' toggle, which is toggled on."
+/>
+
+### Enable Web3
+
+Navigate to the **Web3** tab under the **User & Authentication** section in the Clerk Dashboard. Toggle on the Web3 provider.
+
+<Images 
+width={3024}
+height={1652}
+src="/docs/images/authentication/web3.png"
+alt="The 'Web3' tab under the 'User & Authentication' section with a red arrow pointing to the 'Metamask' toggle, which is toggled on."
+/>
+
+### Finished!
+
+Now, when a user signs up or signs in to your application, users can do so with Google or Metamask. For more information on setting up different social providers, see our [Social Connections documentation](/docs/authentication/social-connections/overview).
+
+</Steps>
