--- a/docs/authentication/configuration/sign-up-options.mdx
+++ b/docs/authentication/configuration/sign-up-options.mdx
@@ -7,9 +7,12 @@ description: Clerk provides various options for setting up a sign-up flow.
 
 Clerk provides various options for setting up a sign-up flow. These options are configurable from the Clerk Dashboard. When a new application is created, you will be presented with the following screen:
 
-{/* Don't move ![] to a new line, otherwise MDX adds a <p> tag and it breaks A11Y */}
-
-<div style={{filter: "drop-shadow(rgba(0, 0, 0, 0.16) 0px 12px 24px)"}}>![An interactive builder to make your "<SignIn />" component truly yours, which lets you select your auth providers.](/docs/images/setup-clerk/create-sign-in-comp.png)</div>
+<Images 
+width={1879}
+height={1373}
+src="/docs/images/setup-clerk/create-sign-in-comp.png"
+alt="An interactive builder for customizing your <SignIn /> component, which includes choosing identifiers and social login options."
+/>
 
 In addition to the application name set for your instance, there will be standard authentication options to choose from: [identifiers](#choose-identifiers), [authentication strategy](#choose-authentication-strategy), [social login providers](#choose-social-login-providers), and [Web3 authentication](#choose-web3-authentication).
 
@@ -51,17 +54,23 @@ Clerk provides Web3 authentication as an option with MetaMask. As part of valida
 
 Although not available as an option in the initial new application screen, you can opt to turn on multifactor authentication (MFA) from the [configuration screen](https://dashboard.clerk.com/last-active?path=/user-authentication/multi-factor) in the Clerk Dashboard. For more information on how to set up multifactor authentication, check out our [detailed guide](/docs/custom-flows/mfa#overview).
 
-{/* Don't move ![] to a new line, otherwise MDX adds a <p> tag and it breaks A11Y */}
-
-<div style={{filter: "drop-shadow(rgba(0, 0, 0, 0.16) 0px 12px 24px)"}}>![Multifactor authentication configuration screen](/docs/images/custom-flows/multifactor.png)</div>
+<Images 
+width={3024}
+height={1652}
+src="/docs/images/custom-flows/multifactor.png"
+alt="The 'Multi-factor authentication' tab under the 'User & Authentication' section of the Clerk Dashboard."
+/>
 
 ## Set sign-up restrictions
 
 The allowlist feature allows you to control who can get access to your application. It can restrict sign ups to only a certain set of email addresses or phone numbers that you define. Enable this feature by navigating to the [Sign-up restrictions](https://dashboard.clerk.com/last-active?path=/user-authentication/signup-restrictionsq) screen in the Clerk Dashboard.
 
-{/* Don't move ![] to a new line, otherwise MDX adds a <p> tag and it breaks A11Y */}
-
-<div style={{filter: "drop-shadow(rgba(0, 0, 0, 0.16) 0px 12px 24px)"}}>![Sign-up restrictions configuration screen](/docs/images/setup-clerk/restrictions.png)</div>
+<Images 
+width={3024}
+height={1652}
+src="/docs/images/authentication/restrictions.png"
+alt="The 'Restrictions' tab under the 'User & Authentication' section of the Clerk Dashboard."
+/>
 
 After turning on the allowlist feature, you can add individual email addresses and phone numbers, or whitelist entire email domains.
 
