consolidating many tings

--- a/docs/organizations/overview.mdx
+++ b/docs/organizations/overview.mdx
@@ -1,5 +1,39 @@
 ---
-sanity_slug: /docs/organizations/overview
+title: Organizations
+description: Learn about how to create and manage Clerk Organizations and their members.
 ---
 
-# This is a stub
+# Organizations
+
+Organizations are shared accounts, useful for project and team leaders. Organization members can usually collaborate across shared resources. Each member of an organization needs to have a user account in your application. 
+
+All organization members have access to *most* of the organization resources, but depending on their [role](#roles), some members can take advantage of administrative features.
+
+Clerk provides [prebuilt components](/docs/components/overview), [React hooks](/docs/references/react/use-organization), and [APIs](/docs/references/javascript/organization/organization) to help you integrate organizations into your application.
+
+<Callout type="info">
+  To explore Clerk's Organizations, check out this demo repo:
+  https://github.com/clerkinc/organizations-demo
+</Callout>
+
+## Roles 
+
+You can establish differentiation among member permissions through organization member roles. Roles determine a user's level of access to the organization. There are currently two roles: administrators and members.
+
+- `admin` - Offers full access to organization resources. Members with the admin role have administrator privileges and can fully manage organizations and organization memberships.
+- `basic_member` - The standard role for a user that is part of the organization. Access to organization resources is limited. Basic members cannot manage organizations and organization memberships, but can view information about the organization and other members in it.
+
+## Available actions
+
+You can use Clerk's organizations feature to provide team grouping and sharing functionality for users of your applications.
+
+Your users can [create organizations](/docs/organizations/creating-organizations). Organization owners effectively get the `admin` role.
+
+All members of an organization, regardless of their role, can view information about other members in the same organization.
+
+Administrators can [invite other users to join the organization](/docs/organizations/inviting-users). An invitation email is sent out, and organization invitations support adding existing users of your application, or new ones. New users can register once they accept the invitation.
+
+Administrators can [manage roles](/docs/organizations/managing-roles), such as revoking an invitation for a user that hasn't joined yet or removing a user who is already a member from the organization. When removing organization members or updating their role, there needs to be at least one administrator for the organization at all times.
+
+Administrators can also update an organization, such as changing the organization name.
+
