--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -180,7 +180,7 @@ These values control the behavior of the components when you sign in or sign up 
 
 ### Embed the `<UserButton />`
 
-The [`<UserButton />`](/docs/users/user-button) allows users to manage their account information and log out, thus allowing you to complete a full authentication circle.
+The [`<UserButton />`](/docs/components/user/user-button) allows users to manage their account information and log out, thus allowing you to complete a full authentication circle.
 
 You can add it anywhere you want, but next to the logo in your main application page is a good start.
 
