--- a/docs/references/javascript/sign-in/authenticate-with.mdx
+++ b/docs/references/javascript/sign-in/authenticate-with.mdx
@@ -25,7 +25,7 @@ Signs in users via OAuth. This is commonly known as Single Sign On (SSO), where 
   rows={[{cells: [
         <code>strategy</code>,
         <code>string</code>,
-        <>The OAuth provider that will be used for signing in. Must be one of the supported <a href="#o-auth-strategy"><code>OAuthStrategy</code></a>.</>
+        <>The OAuth provider that will be used for signing in. Must be one of the supported <a href="/docs/references/javascript/types/oauth-strategy"><code>OAuthStrategy</code></a>.</>
     ]}, {cells: [
         <code>redirectUrl</code>,
         <code>string</code>,
@@ -111,91 +111,4 @@ Starts a sign in flow that authenticates the user against their public wallet ad
         <>The <a href="https://en.wikipedia.org/wiki/Cryptographic_nonce">crypographic nonce</a> used in the sign-in.</>
         ]}
     ]}
-/>
-
-## Types
-
-### `OAuthStrategy`
-
-```typescript
-type OAuthStrategy = |
-"oauth_facebook"|
-"oauth_github"|
-"oauth_google"|
-"oauth_hubspot"|
-"oauth_tiktok"|
-"oauth_gitlab"|
-"oauth_discord"|
-"oauth_twitter"|
-"oauth_twitch"|
-"oauth_linkedin"|
-"oauth_dropbox"|
-"oauth_bitbucket"|
-"oauth_microsoft"|
-"oauth_notion";
-```
-
-The OAuth provider that will be used for signing in. Must be one of the supported OAuthStrategy.
-
-<Tables
-  headings={['Name', 'Type', 'Description']}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[{cells: [
-        <code>oauth_facebook</code>,
-        <code>string</code>,
-        <>Specify Facebook as the verification OAuth provider.</>
-    ]}, {cells: [
-        <code>oauth_github</code>,
-        <code>string</code>,
-        <>Specify Github as the verification OAuth provider.</>
-    ]}, {cells: [
-        <code>oauth_google</code>,
-        <code>string</code>,
-        <>Specify Google as the verification OAuth provider.</>
-    ]}, {cells: [
-        <code>oauth_hubspot</code>,
-        <code>string</code>,
-        <>Specify HubSpot as the verification OAuth provider.</>
-    ]}, {cells: [
-        <code>oauth_tiktok</code>,
-        <code>string</code>,
-        <>Specify TikTok as the verification OAuth provider.</>
-    ]}, {cells: [
-        <code>oauth_gitlab</code>,
-        <code>string</code>,
-        <>Specify GitLab as the verification OAuth provider.</>
-    ]}, {cells: [
-        <code>oauth_discord</code>,
-        <code>string</code>,
-        <>Specify Discord as the verification OAuth provider.</>
-    ]}, {cells: [
-        <code>oauth_twitter</code>,
-        <code>string</code>,
-        <>Specify Twitter as the verification OAuth provider.</>
-    ]}, {cells: [
-        <code>oauth_twitch</code>,
-        <code>string</code>,
-        <>Specify Twitch as the verification OAuth provider.</>
-    ]}, {cells: [
-        <code>oauth_linkedin</code>,
-        <code>string</code>,
-        <>Specify LinkedIn as the verification OAuth provider.</>
-    ]}, {cells: [
-        <code>oauth_dropbox</code>,
-        <code>string</code>,
-        <>Specify Dropbox as the verification OAuth provider.</>
-    ]}, {cells: [
-        <code>oauth_bitbucket</code>,
-        <code>string</code>,
-        <>Specify Bitbucket as the verification OAuth provider.</>
-    ]}, {cells: [
-        <code>oauth_microsoft</code>,
-        <code>string</code>,
-        <>Specify Microsoft as the verification OAuth provider.</>
-    ]},
-    {cells: [
-        <code>oauth_notion</code>,
-        <code>string</code>,
-        <>Specify Notion as the verification OAuth provider.</>
-    ]}]}
 />
