--- a/docs/references/javascript/sign-up/sign-up.mdx
+++ b/docs/references/javascript/sign-up/sign-up.mdx
@@ -85,7 +85,7 @@ The `create` method will return a promise of the new SignUp object. This sign up
 {cells: [<code>strategy</code>, <code>{"OAuthStrategy \| SamlStrategy \| TicketStrategy"}</code>, <>The strategy to use for the sign-up flow.</>]},
 {cells: [<code>redirectUrl</code>, <code>string</code>, <>The redirect URL after the sign-up flow has completed.</>]},
 {cells: [<code>actionCompleteRedirectUrl</code>, <code>string</code>, <>The redirect URL after the action has completed for OAuth and SAML sign-up strategies</>]},
-{cells: [<code>transfer</code>, <code>boolean</code>, <>Transfer the user to a dedicated sign up for an oauth flow.</>]},
+{cells: [<code>transfer</code>, <code>boolean</code>, <>Transfer the user to a dedicated sign up for an OAuth flow.</>]},
 {cells: [<code>ticket</code>, <code>string</code>, <>If the strategy is ticket you need to provide the ticket or token generated from the Backend API.</>]},
   ]}
 />
