--- a/docs/users/overview.mdx
+++ b/docs/users/overview.mdx
@@ -1,5 +1,21 @@
 ---
-sanity_slug: /docs/users/overview
+title: Users
+description: Learn how to manage your users in your Clerk application.
 ---
 
-# This is a stub
+# Users
+
+Clerk provides the prebuilt components [`<UserButton />`](/docs/components/user/user-button) and [`<UserProfile />`](/docs/components/user/user-profile) in order to help your users manage their profile data. However, if you would like to manage user authentication and profile data yourself, or if you would like to build your own profile management flow, Clerk provides a set of APIs to help you do that.
+
+## `User` object
+
+The `User` object holds all of the information for a single user of your application and provides a set of methods to manage their account. Each user has a unique authentication identifier which might be their email address, phone number, or a username.
+
+A user can be contacted at their primary email address or primary phone number. They can have more than one registered email address, but only one of them will be their primary email address. This goes for phone numbers as well; a user can have more than one, but only one phone number will be their primary. At the same time, a user can also have one or more external accounts by connecting to [OAuth providers](/docs/authentication/social-connections/overview) such as Google, Apple, Facebook, and many more.
+
+Finally, a `User` object holds profile data like the user's name, profile picture, and a set of [metadata](/docs/users/metadata) that can be used internally to store arbitrary information. The metadata are split into `publicMetadata` and `privateMetadata`. Both types are set from the [Backend API](https://clerk.com/docs/reference/backend-api), but public metadata can be accessed from the [Frontend API](https://reference.clerk.dev/reference/frontend-api-reference) as well.
+
+For more information on the `User` object, such as helper methods for retrieving and updating user information and authentication status, checkout the [ClerkJS SDK documentation](/docs/references/javascript/user/user).
+
+If you are using React, the [React SDK](/docs/references/react/use-user) provides some hooks to help manage user authentication and profile data.
+
