apply code review changes

--- a/docs/authentication/configuration/sign-in-options.mdx
+++ b/docs/authentication/configuration/sign-in-options.mdx
@@ -1,6 +1,6 @@
 ---
 title: Sign-in options | Authentication
-description: Clerk provides a large selection of options for managing your user's sign-in experience
+description: Clerk provides a large selection of options for managing your user's sign-in experience.
 ---
 
 # Sign-in options
@@ -8,10 +8,10 @@ description: Clerk provides a large selection of options for managing your user'
 Clerk provides a large selection of options for managing your user's sign-in experience. Clerk makes it easy to customize the way signing in works in your application, whether your users will be authenticating with [Passwords](/docs/custom-flows/email-password), [Magic Links](/docs/custom-flows/magic-links), [One-time Passcodes](/docs/custom-flows/email-sms-otp), or through a [Social OAuth provider](/docs/authentication/social-connections/overview).
 
 <Callout type="info">
-  For more information about the steps required for a user to sign-in, see our [sign-in flow documentation](/docs/authentication/custom-flows#sign-in-flow).
+  For more information about the steps required for a user to sign-in, see the [sign-in flow documentation](/docs/authentication/custom-flows#sign-in-flow).
 </Callout>
 
-You can create your sign-in flow with Clerk's [hosted pages](/docs/account-portal/overview) or [prebuilt components](/docs/components/overview). If you need more control over your flow, you can build your own by using [React hooks](/docs/custom-flows/use-sign-up) or by using the methods of the [SignIn object](/docs/references/javascript/sign-in/sign-in).
+You can create your sign-in flow with Clerk's [hosted pages](/docs/account-portal/overview) or [prebuilt components](/docs/components/overview). If you need more control over your flow, you can build your own by using [React hooks](/docs/custom-flows/use-sign-up) or by using the methods of the [`SignIn` object](/docs/references/javascript/sign-in/sign-in).
 
 ## Getting started
 
@@ -50,11 +50,11 @@ Connected accounts are third-party sources used to authenticate your users.
 - [Social Login (OAuth)](/docs/authentication/social-connections/oauth)
 - [Web3 authentication](/docs/users/web3-wallets)
 
-Once you've selected the first methods you would like to try, click **Create Application**. If you're not totally sure about what you want to use, don't worry. You can change any of these settings from the Clerk Dashboard later on.
+Once you've selected the first methods you would like to try, click **Create Application**. If you're not sure about what you want to use, don't worry. You can change any of these settings from the Clerk Dashboard later on.
 
 ## Making changes
 
-If your initial sign-in choices aren't working out (or if you want to add more options for your users), you can make changes by navigating to the **User & Authentication** section of the Clerk Dashboard.
+If your initial sign-in choices aren't working out or if you want to add more options for your users, you can make changes by navigating to the **User & Authentication** section of the Clerk Dashboard.
 
 <Images 
 width={3024}
@@ -121,10 +121,10 @@ alt="The 'Authentication factors' section under 'Email, Phone, Username' tab wit
 
 Now, when a user signs up or signs in to your application, Clerk will send a verification link or code to the user's email.
 
-You can make changes to the redirect behavior of both Sign-in and Sign-up by visiting the **Paths** section of the Clerk Dashboard, or by passing in props if you are using our [custom Clerk components]().
+You can make changes to the redirect behavior of both Sign-in and Sign-up by visiting the **Paths** section of the Clerk Dashboard, or by passing in props if you are using Clerk's [custom components](/docs/components/overview).
 
 <Callout type="info">
-  For more information on one-time passcodes, see our [OTP documentation](/docs/custom-flows/email-sms-otp).
+  For more information on one-time passcodes, see Clerk's [detailed guide](/docs/custom-flows/email-sms-otp).
 </Callout>
 
 </Steps>
@@ -187,10 +187,10 @@ alt="The 'Authentication factors' section under 'Email, Phone, Username' tab wit
 
 Now, when a user signs up or signs in to your application, Clerk will send a verification code to the user's phone.
 
-You can make changes to the redirect behavior of both Sign-in and Sign-up by visiting the **Paths** section of the Clerk Dashboard, or by passing in props if you are using our [custom Clerk components]().
+You can make changes to the redirect behavior of both Sign-in and Sign-up by visiting the **Paths** section of the Clerk Dashboard, or by passing in props if you are using Clerk's [custom components](/docs/components/overview).
 
 <Callout type="info">
-  For more information on one-time passcodes, see our [OTP documentation](/docs/custom-flows/email-sms-otp).
+  For more information on one-time passcodes, see the [detailed guide](/docs/custom-flows/email-sms-otp).
 </Callout>
 
 </Steps>
@@ -238,6 +238,6 @@ alt="The 'Web3' tab under the 'User & Authentication' section with a red arrow p
 
 ### Finished!
 
-Now, when a user signs up or signs in to your application, users can do so with Google or Metamask. For more information on setting up different social providers, see our [Social Connections documentation](/docs/authentication/social-connections/overview).
+Now, when a user signs up or signs in to your application, users can do so with Google or Metamask. For more information on setting up different social providers, see the [Social Connections guide](/docs/authentication/social-connections/overview).
 
 </Steps>
