--- a/docs/authentication/configuration/session-options.mdx
+++ b/docs/authentication/configuration/session-options.mdx
@@ -1,5 +1,5 @@
 ---
-title: Session options
+title: Session options | Authentication
 description: Clerk provides session management options for fine-tuning user visits to your application.
 ---
 
