feat: Update sign up restrictions page (WIP)

--- a/docs/authentication/configuration/sign-up-options.mdx
+++ b/docs/authentication/configuration/sign-up-options.mdx
@@ -57,12 +57,4 @@ Although not available as an option in the initial new application screen, you c
 
 ## Set sign-up restrictions
 
-The allowlist feature allows you to control who can get access to your application. It can restrict sign ups to only a certain set of email addresses or phone numbers that you define. Enable this feature by navigating to the [Sign-up restrictions](https://dashboard.clerk.com/last-active?path=/user-authentication/signup-restrictionsq) screen in the Clerk Dashboard.
-
-{/* Don't move ![] to a new line, otherwise MDX adds a <p> tag and it breaks A11Y */}
-
-<div style={{filter: "drop-shadow(rgba(0, 0, 0, 0.16) 0px 12px 24px)"}}>![Sign-up restrictions configuration screen](/docs/images/setup-clerk/restrictions.png)</div>
-
-After turning on the allowlist feature, you can add individual email addresses and phone numbers, or whitelist entire email domains.
-
-For example, if you add "clerk.dev" as an allowed email domain, it means that anybody with a "@clerk.dev" email address can sign up for your application. Email addresses from different domains will not be able to sign up.
+Visit [Restrictions](/docs/authentication/configuration/restrictions) for details.
