--- a/docs/authentication/configuration/restrictions.mdx
+++ b/docs/authentication/configuration/restrictions.mdx
@@ -1,54 +1,76 @@
 ---
-sanity_slug: /docs/authentication/restrictions
+title: Restrictions | Authentication
+description: Learn how to manage user access to your application by configuring Clerk's access restrictions.
 ---
 
-# Overview
+# Restrictions
 
-# Allowlist
+Clerk provides a set of restriction options designed to provide you with enhanced control over who can gain access to your application. Through these restriction settings, you can limit sign-ups or prevent accounts with specific identifiers from accessing your application.  These identifiers can be email addresses, phone numbers, and even entire domains. To get started, navigate to the **Restrictions** tab under the **User & Authentication** section of the [Clerk Dashboard](https://dashboard.clerk.com).
 
-The Allowlist feature allows you to control who can get access to your application. It can restrict sign-ups to only a certain set of email addresses or phone numbers that you define. This can be used in a way that acts as a reverse blocklist, only allowing the users added to access your application and blocking all others. (Note: Allowlist is a premium feature and is not available on the Free plan. [Upgrade your plan](https://clerk.com/pricing) to enable this feature.)
+## Allowlist
+
+<Callout type="info">
+  Allowlist is a premium feature and is not available on the Free plan. [Upgrade your plan](https://clerk.com/pricing) to enable this feature.
+ </Callout>
+
+The Allowlist feature allows you to control who can get access to your application. It can restrict sign-ups to only a certain set of email addresses or phone numbers that you define. This can be used in a way that acts as a reverse blocklist, only allowing the users added to access your application and blocking all others.
+
+Enable this feature by navigating to the **Allowlist** section in the **Restrictions** tab under the **User & Authentication** section.
 
 <Callout type="warning" emoji="⚠️">
-    Be aware that turning on the Allowlist feature without adding any identifier exceptions blocks all sign-ups.
+  Be aware that turning on the Allowlist feature without adding any identifier exceptions blocks *all* sign-ups.
 </Callout>
 
-Enable this feature by navigating to the [Restrictions](https://dashboard.clerk.com/last-active?path=/user-authentication/signup-restrictions) screen in the Clerk Dashboard.
-
-{/* Don't move ![] to a new line, otherwise MDX adds a <p> tag and it breaks A11Y */}
-
-<div style={{filter: "drop-shadow(rgba(0, 0, 0, 0.16) 0px 12px 24px)"}}>![Restrictions configuration screen](/docs/images/setup-clerk/allowlist.png)</div>
+<Images
+width={3024}
+height={1654}
+src="/docs/images/authentication/restrictions/allowlist.png"
+alt="The 'Allowlist' section in the 'Restrictions' tab under the 'User & Authentication' section of the Clerk Dashboard. A red arrow is pointing to the 'Enable allowlist' toggle, which is toggled on."
+/>
 
 After turning on the Allowlist feature, you can add individual email addresses and phone numbers, or whitelist entire email domains.
 
 For example, if you add "clerk.dev" as an allowed email domain, it means that anybody with a "@clerk.dev" email address can sign up for your application. Email addresses from different domains will not be able to sign up.
 
-# Blocklist
+## Blocklist
 
-The Blocklist feature allows you to control who can get access to your application. It can restrict sign ups for a certain set of email addresses or phone numbers that you define. (Note: Blocklist is a premium feature and is not available on the Free plan. [Upgrade your plan](https://clerk.com/pricing) to enable this feature.)
+<Callout type="info">
+  Blocklist is a premium feature and is not available on the Free plan. [Upgrade your plan](https://clerk.com/pricing) to enable this feature.
+</Callout>
 
-Enable this feature by navigating to the [Restrictions](https://dashboard.clerk.com/last-active?path=/user-authentication/signup-restrictions) screen in the Clerk Dashboard.
+The Blocklist feature allows you to control who can get access to your application. It can restrict sign ups for a certain set of email addresses or phone numbers that you define.
 
-{/* Don't move ![] to a new line, otherwise MDX adds a <p> tag and it breaks A11Y */}
+Enable this feature by navigating to the **Blocklist** section in the **Restrictions** tab under the **User & Authentication** section.
 
-<div style={{filter: "drop-shadow(rgba(0, 0, 0, 0.16) 0px 12px 24px)"}}>![Restrictions configuration screen](/docs/images/setup-clerk/blocklist.png)</div>
+<Images
+width={3024}
+height={1654}
+src="/docs/images/authentication/restrictions/blocklist.png"
+alt="The 'Blocklist' section in the 'Restrictions' tab under the 'User & Authentication' section of the Clerk Dashboard. A red arrow is pointing to the 'Enable blocklist' toggle, which is toggled on."
+/>
 
 After turning on the Blocklist feature, you can add individual email addresses and phone numbers, or blacklist entire email domains.
 
 For example, if you add "clerk.dev" as a blocked email domain, it means that anybody with a "@clerk.dev" email address will not be able to sign up for your application. Email addresses from different domains will not be affected.
 
 <Callout type="warning" emoji="⚠️">
-    In the case you have enabled the Allowlist and the Blocklist and have added the same identifier in both, the Allowlist takes precedence.
+  In the case you have enabled the Allowlist and the Blocklist and have added the same identifier in both, the Allowlist takes precedence.
 </Callout>
 
-# Other restrictions
+## Other restrictions
 
-## Block email subaddresses
+### Block email subaddresses
 
-The Block email subaddresses feature allows you to control who can get access to your application. It can restrict email addresses that contain the characters `+`, `=` or `#` from signing up or being added to existing accounts. Enable this feature by navigating to the [Restrictions](https://dashboard.clerk.com/last-active?path=/user-authentication/signup-restrictions) screen in the Clerk Dashboard.
+The Block email subaddresses feature allows you to control who can get access to your application. It can restrict email addresses that contain the characters `+`, `=` or `#` from signing up or being added to existing accounts.
 
-{/* Don't move ![] to a new line, otherwise MDX adds a <p> tag and it breaks A11Y */}
+Enable this feature by navigating to the **Restrictions** section in the **Restrictions** tab under the **User & Authentication** section.
 
-<div style={{filter: "drop-shadow(rgba(0, 0, 0, 0.16) 0px 12px 24px)"}}>![Restrictions configuration screen](/docs/images/setup-clerk/other_restrictions.png)</div>
+<Images
+width={3024}
+height={1654}
+src="/docs/images/authentication/restrictions/subaddresses.png"
+alt="The 'Restrictions' section in the 'Restrictions' tab under the 'User & Authentication' section of the Clerk Dashboard. A red arrow is pointing to the 'Block email subaddresses' toggle, which is toggled on."
+/>
 
 After turning on the Block email subaddresses feature, any sign ups with an email address that contains a subaddress will be blocked.
 
