--- a/docs/users/overview.mdx
+++ b/docs/users/overview.mdx
@@ -17,5 +17,5 @@ Finally, a `User` object holds profile data like the user's name, profile pictur
 
 For more information on the `User` object, such as helper methods for retrieving and updating user information and authentication status, checkout the [ClerkJS SDK documentation](/docs/references/javascript/user/user).
 
-If you are using React, the [React SDK](/docs/references/react/use-user) provides some hooks to help manage user authentication and profile data.
+If you are using React, the [React SDK](/docs/references/react/use-user) provides hooks to help manage user authentication and profile data.
 
