apply changes from code review

--- a/docs/authentication/configuration/session-options.mdx
+++ b/docs/authentication/configuration/session-options.mdx
@@ -16,12 +16,12 @@ Ultimately, picking the ideal session lifetime is a trade-off between security a
 Fortunately, with Clerk you have to ability to fully control the lifetime of your users' sessions. There are two settings for doing so and you can set them via your instance settings in the [Clerk Dashboard](https://dashboard.clerk.com/): Inactivity timeout and Maximum lifetime.
 
 <Callout type="info">
-  Note that either one or both must be enabled at all times. You are not allowed to disable both settings with respect to security.
+  Note that either one or both must be enabled at all times. For security reasons, you are not allowed to disable both settings.
 </Callout>
 
 ### Inactivity timeout
 
-Denotes the duration after which a session will expire and the user will have to sign in again, if they haven't been active on your site. By default, this setting is disabled for all newly created instances. You can enable it and set your desired value from the **Sessions** settings in the Clerk Dashboard.
+Denotes the duration after which a session will expire and the user will have to sign in again, if they haven't been active on your site. By default, this setting is disabled for all newly created instances. You can enable it and set your desired value from the You can enable it and set your desired value from the [Sessions](https://dashboard.clerk.com/last-active?path=sessions) settings in the Clerk Dashboard.
 
 <Images 
 width={3024}
@@ -32,7 +32,7 @@ alt="The 'Sessions' configuration section in the Clerk Dashboard with a red outl
 
 ### Maximum lifetime
 
-Denotes the duration after which a session will expire and the user will have to sign in again, regardless of their activity on your site. By default, this setting is enabled with a default value of 7 days for all newly created instances. You can find this setting and change the value in the **Sessions** settings in the Clerk Dashboard.
+Denotes the duration after which a session will expire and the user will have to sign in again, regardless of their activity on your site. By default, this setting is enabled with a default value of 7 days for all newly created instances. You can find this setting and change the value in the [Sessions](https://dashboard.clerk.com/last-active?path=sessions) settings in the Clerk Dashboard.
 
 <Images 
 width={3024}
@@ -45,7 +45,7 @@ alt="The 'Sessions' settings in the Clerk Dashboard with a red outline around th
 
 Multi-session applications allow users to be signed into more than one account at a time from the same browser. Users may switch the active account by opening the [`<UserButton />`](/docs/components/user/user-button) and selecting the desired account.
 
-To enable this feature in your application, you simply need to toggle on the **Mutli-session handling** option under the **Sessions** settings in the Clerk Dashboard.
+To enable this feature in your application, you simply need to toggle on the **Mutli-session handling** option under the [Sessions](https://dashboard.clerk.com/last-active?path=sessions) settings in the Clerk Dashboard.
 
 <Images 
 width={3024}
@@ -60,7 +60,7 @@ Learn more about working with multi-session applications with Clerk components a
 
 Session tokens are JWTs that contain a set of standard claims required by Clerk, but there are times when you want to augment these tokens by providing additional claims of your own.
 
-To add custom claims to the session token, navigate to the **Sessions** settings in the Clerk Dashboard, and click on the **Edit** button in the **Customize session token** section. This will open a modal window where you can add claims and even use our handy shortcodes.
+To add custom claims to the session token, navigate to the [Sessions](https://dashboard.clerk.com/last-active?path=sessions) settings in the Clerk Dashboard, and click on the **Edit** button in the **Customize session token** section. This will open a modal window where you can add claims and even use our handy shortcodes.
 
 <Images 
 width={3024}
