sign-in vs sign in

--- a/docs/authentication/configuration/sign-in-options.mdx
+++ b/docs/authentication/configuration/sign-in-options.mdx
@@ -8,7 +8,7 @@ description: Clerk provides a large selection of options for managing your user'
 Clerk provides a large selection of options for managing your user's sign-in experience. Clerk makes it easy to customize the way signing in works in your application, whether your users will be authenticating with [Passwords](/docs/custom-flows/email-password), [Magic Links](/docs/custom-flows/magic-links), [One-time Passcodes](/docs/custom-flows/email-sms-otp), or through a [Social OAuth provider](/docs/authentication/social-connections/overview).
 
 <Callout type="info">
-  For more information about the steps required for a user to sign-in, see the [sign-in flow documentation](/docs/authentication/custom-flows#sign-in-flow).
+  For more information about the steps required for a user to sign in, see the [sign-in flow documentation](/docs/authentication/custom-flows#sign-in-flow).
 </Callout>
 
 You can create your sign-in flow with Clerk's [hosted pages](/docs/account-portal/overview) or [prebuilt components](/docs/components/overview). If you need more control over your flow, you can build your own by using [React hooks](/docs/custom-flows/use-sign-up) or by using the methods of the [`SignIn` object](/docs/references/javascript/sign-in/sign-in).
@@ -36,12 +36,12 @@ Identifiers are how your application recognizes an individual user.
 
 ### Authentication strategy
 
-The authentication refers to whether your application will rely on passwords or a passwordless method of authentication.
+The authentication strategy refers to whether your application will rely on passwords or a passwordless method of authentication.
 
 - [Password](/docs/custom-flows/email-password)
 - Passwordless
-  - [One-time password (OTP)](/docs/custom-flows/email-sms-otp) - To sign-in, the user will receive a code to their email or phone.
-  - [Magic Link](/docs/custom-flows/magic-links) - To sign-in, the user will click a link sent to their email.
+  - [One-time password (OTP)](/docs/custom-flows/email-sms-otp) - To sign in, the user will receive a code to their email or phone.
+  - [Magic Link](/docs/custom-flows/magic-links) - To sign in, the user will click a link sent to their email.
 
 ### Connected accounts
 
@@ -65,17 +65,17 @@ alt="The 'User and Authentication' section of the Clerk Dashboard, which default
 
 ## Sign-in examples
 
-Lets take a look at a few of the different sign-in options and how they could be combined to fit your application's needs.
+Lets take a look at a few of the different sign-in options and how they can be combined to fit your application's needs.
 
 ### Email address
 
-Let's imagine that you want to require your users to sign-up and sign-in with their email. You want to make sure the email they provided is verified before they can sign-in. After their email is verified, users can sign-in via passwordless methods: by either clicking a link or entering a one-time code sent to their email.
+Let's imagine that you want to require your users to sign up and sign in with their email. You want to make sure the email they provided is verified before they can sign in. After their email is verified, users can sign in via passwordless methods: by either clicking a link or entering a one-time code sent to their email.
 
 <Steps>
 
-### Allow users to sign-in using their email
+### Allow users to sign in using their email
 
-Ensure that **Email address** is enabled as an identifier. Navigate to the [Email, Phone, Username](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username) tab under the **User & Authentication** section in the Clerk Dashboard. The toggle next to **Email address** should be on. If it's not, toggle it on and hit **Apply Changes**. Users can now sign-up and sign-in with their email.
+Ensure that **Email address** is enabled as an identifier. Navigate to the [Email, Phone, Username](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username) tab under the **User & Authentication** section in the Clerk Dashboard. The toggle next to **Email address** should be on. If it's not, toggle it on and hit **Apply Changes**. Users can now sign up and sign in with their email.
 
 <Images 
 width={3024}
@@ -106,9 +106,9 @@ src="/docs/images/authentication/email-address-verification-methods.png"
 alt="The 'Email address' configuration settings with all options toggled on, and with a red outline around the 'Verification Methods' section."
 />
 
-### Allow users to sign-in passwordlessly
+### Allow users to sign in passwordlessly
 
-In the **Authentication factors** section under [Email, Phone, Username](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username), toggle on **Email verification link** and **Email verification code**. This will allow users to sign-in with either a link or a code sent to their email.
+In the **Authentication factors** section under [Email, Phone, Username](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username), toggle on **Email verification link** and **Email verification code**. This will allow users to sign in with either a link or a code sent to their email.
 
 <Images 
 width={3024}
@@ -121,7 +121,7 @@ alt="The 'Authentication factors' section under 'Email, Phone, Username' tab wit
 
 Now, when a user signs up or signs in to your application, Clerk will send a verification link or code to the user's email.
 
-You can make changes to the redirect behavior of both Sign-in and Sign-up by visiting the [Paths](https://dashboard.clerk.com/last-active?path=paths) section of the Clerk Dashboard, or by passing in props if you are using Clerk's [custom components](/docs/components/overview).
+You can make changes to the redirect behavior of both sign-in and sign-up flows by visiting the [Paths](https://dashboard.clerk.com/last-active?path=paths) section of the Clerk Dashboard, or by passing in props if you are using Clerk's [custom components](/docs/components/overview).
 
 <Callout type="info">
   For more information on one-time passcodes, see Clerk's [detailed guide](/docs/custom-flows/email-sms-otp).
@@ -135,13 +135,13 @@ You can make changes to the redirect behavior of both Sign-in and Sign-up by vis
   Phone number identifiers and SMS verification are Premium features that are only available on some plans. For more information visit the [Plan & Billing](https://dashboard.clerk.com/last-active?path=plan-billing) section of the Clerk Dashboard.
 </Callout>
 
-Let's imagine that your application is going to be exclusively used by people on their phones. You want to collect the user's phone number as the identifier, and you want the user to sign-in to your app by entering a one-time code sent via SMS to the user's device.
+Let's imagine that your application is going to be exclusively used by people on their phones. You want to collect the user's phone number as the identifier, and you want the user to sign in to your app by entering a one-time code sent via SMS to the user's device.
 
 <Steps>
 
-### Allow users to sign-in using their phone number
+### Allow users to sign in using their phone number
 
-Ensure that **Phone number** is enabled as an identifier. Navigate to the [Email, Phone, Username](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username) tab under the **User & Authentication** section in the Clerk Dashboard. The toggle next to **Phone number** should be on. If it's not, toggle it on and hit **Apply Changes**. Users can now sign-up and sign-in with their phone number.
+Ensure that **Phone number** is enabled as an identifier. Navigate to the [Email, Phone, Username](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username) tab under the **User & Authentication** section in the Clerk Dashboard. The toggle next to **Phone number** should be on. If it's not, toggle it on and hit **Apply Changes**. Users can now sign up and sign in with their phone number.
 
 <Images 
 width={3024}
@@ -172,9 +172,9 @@ src="/docs/images/authentication/phone-number-configuration-settings.png"
 alt="The 'Phone number' configuration settings with all options toggled on."
 />
 
-### Allow users to sign-in with an SMS code
+### Allow users to sign in with an SMS code
 
-In the **Authentication factors** section under [Email, Phone, Username](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username), toggle on **SMS verification code**. This will allows users to sign-in with a code sent to their phone.
+In the **Authentication factors** section under [Email, Phone, Username](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username), toggle on **SMS verification code**. This will allows users to sign in with a code sent to their phone.
 
 <Images 
 width={3024}
@@ -187,7 +187,7 @@ alt="The 'Authentication factors' section under 'Email, Phone, Username' tab wit
 
 Now, when a user signs up or signs in to your application, Clerk will send a verification code to the user's phone.
 
-You can make changes to the redirect behavior of both Sign-in and Sign-up by visiting the [Paths](https://dashboard.clerk.com/last-active?path=paths) section of the Clerk Dashboard, or by passing in props if you are using Clerk's [custom components](/docs/components/overview).
+You can make changes to the redirect behavior of both sign-in and sign-up flows by visiting the [Paths](https://dashboard.clerk.com/last-active?path=paths) section of the Clerk Dashboard, or by passing in props if you are using Clerk's [custom components](/docs/components/overview).
 
 <Callout type="info">
   For more information on one-time passcodes, see the [detailed guide](/docs/custom-flows/email-sms-otp).
@@ -197,7 +197,7 @@ You can make changes to the redirect behavior of both Sign-in and Sign-up by vis
 
 ### Social OAuth + Web3
 
-Let's imagine that you want your users to sign-in with Social OAuth or with a connected Web3 account.
+Let's imagine that you want your users to sign in with Social OAuth or with a connected Web3 account.
 
 <Steps>
 
