add direct link to dashboard reference

--- a/docs/authentication/configuration/sign-in-options.mdx
+++ b/docs/authentication/configuration/sign-in-options.mdx
@@ -54,7 +54,7 @@ Once you've selected the first methods you would like to try, click **Create App
 
 ## Making changes
 
-If your initial sign-in choices aren't working out or if you want to add more options for your users, you can make changes by navigating to the **User & Authentication** section of the Clerk Dashboard.
+If your initial sign-in choices aren't working out or if you want to add more options for your users, you can make changes by navigating to the [User & Authentication](https://dashboard.clerk.com/last-active?path=user-authentication) section of the Clerk Dashboard.
 
 <Images 
 width={3024}
